sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:10: error: identifier expected but integer literal found.
    if(t[j] > t[j+1]){
                  ^AlgBubbleSort1:15: error: ']' expected but '}' found.
  }
  ^